force-app/main/default/objects/HelpInteraction__c/HelpInteraction__c.object-meta.xml
<CustomObject>
    <description>An Interaction - Helped User navigation and feedback - with an Improved Help Entity or feature</description>
    <label>Help Interaction</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>