force-app/main/default/objects/HelpInteraction__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>The level of precision of the recorded geolocation (where available) in metres</description>
    <inlineHelpText>The level of precision of the recorded geolocation (where available) in metres</inlineHelpText>
    <label>Accuracy (metres)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>