force-app/main/default/objects/HelpInteraction__c/fields/Altitude__c.field-meta.xml
<CustomField>
    <fullName>Altitude__c</fullName>
    <description>Altitude in metres above mean sea level of the logged geolocation (where available)</description>
    <inlineHelpText>Altitude in metres above mean sea level of the logged geolocation (where available)</inlineHelpText>
    <label>Altitude (metres AMSL)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>