force-app/main/default/objects/HelpInteraction__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>The name of the navigator software (which may or may not be an actual web browser) as reported by Salesforce</description>
    <inlineHelpText>The name of the navigator software (which may or may not be an actual web browser) as reported by Salesforce</inlineHelpText>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>