force-app/main/default/objects/HelpInteraction__c/fields/ComponentId__c.field-meta.xml
<CustomField>
    <fullName>ComponentId__c</fullName>
    <description>Where relevant, the Component ID of the Lightning component that logged this interaction</description>
    <inlineHelpText>Where relevant, the Component ID of the Lightning component that logged this interaction</inlineHelpText>
    <label>Component Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>