force-app/main/default/objects/HelpInteraction__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>The Improved Help Context (typically a URL) in use at the time the interaction was logged</description>
    <inlineHelpText>The Improved Help Context (typically a URL) in use at the time the interaction was logged</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>