force-app/main/default/objects/HelpInteraction__c/fields/Context_List_View_Name__c.field-meta.xml
<CustomField>
    <fullName>Context_List_View_Name__c</fullName>
    <description>Name of the active list view, if interaction occurred on a Salesforce listing</description>
    <inlineHelpText>Name of the active list view, if interaction occurred on a Salesforce listing</inlineHelpText>
    <label>Context List View Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>