force-app/main/default/objects/HelpInteraction__c/fields/ContextLink__c.field-meta.xml
<CustomField>
    <fullName>ContextLink__c</fullName>
    <description>Hyperlink to the record or layout the user was on when the interaction was logged</description>
    <inlineHelpText>Hyperlink to the record or layout the user was on when the interaction was logged</inlineHelpText>
    <label>Context Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>