force-app/main/default/objects/HelpInteraction__c/fields/ContextObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>ContextObjectLabel__c</fullName>
    <description>Where relevant, the name (label) of the Object whose layout gave rise to the interaction</description>
    <inlineHelpText>Where relevant, the name (label) of the Object whose layout gave rise to the interaction</inlineHelpText>
    <label>Context Object Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>