force-app/main/default/objects/HelpInteraction__c/fields/ContextObjectName__c.field-meta.xml
<CustomField>
    <fullName>ContextObjectName__c</fullName>
    <description>Where relevant, the API Name of the Object whose layout gave rise to the interaction</description>
    <inlineHelpText>Where relevant, the API Name of the Object whose layout gave rise to the interaction</inlineHelpText>
    <label>Context Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>