force-app/main/default/objects/HelpInteraction__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula returning Created Date AND TIME for Interaction reports</inlineHelpText>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>