force-app/main/default/objects/HelpInteraction__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <description>Latest timestamp recorded by the component that originally logged the interaction - approximating to a departure time when context check timer has been requested</description>
    <inlineHelpText>Latest timestamp recorded by the component that originally logged the interaction - approximating to a departure time when context check timer has been requested</inlineHelpText>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>