force-app/main/default/objects/HelpInteraction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Comments / feedback requesting new Help content, ideas for improvement or other remarks</description>
    <inlineHelpText>Please provide any new Help content request, ideas for improvement or other comments</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>