force-app/main/default/objects/HelpInteraction__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>The location (where available) at which this interaction was logged, in the form: fractional degrees latitude, fractional degrees longitude</description>
    <inlineHelpText>The location (where available) at which this interaction was logged, in the form: fractional degrees latitude, fractional degrees longitude</inlineHelpText>
    <label>Geolocation</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>