force-app/main/default/objects/HelpInteraction__c/fields/HelpedElement__c.field-meta.xml
<CustomField>
    <fullName>HelpedElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Helped Element involved with this Help Interaction</inlineHelpText>
    <label>Helped Element</label>
    <referenceTo>HelpedElement__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>HelpInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>