force-app/main/default/objects/HelpInteraction__c/fields/HelpedElementId__c.field-meta.xml
<CustomField>
    <fullName>HelpedElementId__c</fullName>
    <formula>HelpedElement__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helped Element Id</label>
    <type>Text</type>
</CustomField>