force-app/main/default/objects/HelpInteraction__c/fields/HelpedElementIdentifier__c.field-meta.xml
<CustomField>
    <fullName>HelpedElementIdentifier__c</fullName>
    <formula>HelpedElement__r.Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helped Element Identifier</label>
    <type>Text</type>
</CustomField>