force-app/main/default/objects/HelpInteraction__c/fields/HelpedPageLayout__c.field-meta.xml
<CustomField>
    <fullName>HelpedPageLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Page Layout within which this Help Interaction took place</inlineHelpText>
    <label>Helped Page Layout</label>
    <referenceTo>HelpedPageLayout__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>HelpInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>