force-app/main/default/objects/HelpInteraction__c/fields/HelpedPageLayoutId__c.field-meta.xml
<CustomField>
    <fullName>HelpedPageLayoutId__c</fullName>
    <formula>HelpedPageLayout__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helped Page Layout Id</label>
    <type>Text</type>
</CustomField>