force-app/main/default/objects/HelpInteraction__c/fields/HelpedPageLayoutIdentifier__c.field-meta.xml
<CustomField>
    <fullName>HelpedPageLayoutIdentifier__c</fullName>
    <formula>HelpedPageLayout__r.PageLayoutIdentifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helped Page Layout Identifier</label>
    <type>Text</type>
</CustomField>