force-app/main/default/objects/HelpInteraction__c/fields/HelpInteractionType__c.field-meta.xml
<CustomField>
    <fullName>HelpInteractionType__c</fullName>
    <description>The type of activity that generated this Help Interaction record</description>
    <inlineHelpText>The type of activity that generated this Help Interaction record</inlineHelpText>
    <label>Help Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Callout</fullName>
                <color>#F3D904</color>
                <default>true</default>
                <label>Callout</label>
            </value>
            <value>
                <fullName>Comment</fullName>
                <color>#F96FB7</color>
                <label>Comment</label>
            </value>
            <value>
                <fullName>Display Density</fullName>
            </value>
            <value>
                <fullName>Form Section Toggle</fullName>
            </value>
            <value>
                <fullName>Full Topic</fullName>
                <color>#3366FF</color>
                <label>Full Topic</label>
            </value>
            <value>
                <fullName>Guide Prompt Viewed</fullName>
            </value>
            <value>
                <fullName>HelpRequest</fullName>
                <label>Help Request</label>
            </value>
            <value>
                <fullName>Issue</fullName>
                <color>#A845DC</color>
                <label>Issue</label>
            </value>
            <value>
                <fullName>List Detail Level</fullName>
            </value>
            <value>
                <fullName>LUX List Type</fullName>
            </value>
            <value>
                <fullName>Nudge Displayed</fullName>
            </value>
            <value>
                <fullName>Personal Field Selection</fullName>
            </value>
            <value>
                <fullName>Personal Form Visibility</fullName>
            </value>
            <value>
                <fullName>Position Detector Context Log</fullName>
            </value>
            <value>
                <fullName>QAM Drag</fullName>
            </value>
            <value>
                <fullName>Reading List Entry</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
                <color>#FF9900</color>
                <label>Resource</label>
            </value>
            <value>
                <fullName>Search</fullName>
                <color>#33FFFF</color>
                <label>Search</label>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
            <value>
                <fullName>Sticky (Archived)</fullName>
            </value>
            <value>
                <fullName>System</fullName>
                <color>#BBBBBB</color>
                <label>System</label>
            </value>
            <value>
                <fullName>Tree Node</fullName>
            </value>
            <value>
                <fullName>Tree Search Cancelled</fullName>
            </value>
            <value>
                <fullName>Tree Search Completed</fullName>
            </value>
            <value>
                <fullName>Vote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>