force-app/main/default/objects/HelpInteraction__c/fields/HelpReadingList__c.field-meta.xml
<CustomField>
    <fullName>HelpReadingList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reading List (or Guide) involved in this interaction</description>
    <inlineHelpText>The Reading List (or Guide) involved in this interaction</inlineHelpText>
    <label>Help Reading List</label>
    <referenceTo>HelpReadingList__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>Help_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>