force-app/main/default/objects/HelpInteraction__c/fields/HelpReadingListId__c.field-meta.xml
<CustomField>
    <fullName>HelpReadingListId__c</fullName>
    <formula>HelpReadingList__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Reading List Id</label>
    <type>Text</type>
</CustomField>