force-app/main/default/objects/HelpInteraction__c/fields/HelpReadingListSummary__c.field-meta.xml
<CustomField>
    <fullName>HelpReadingListSummary__c</fullName>
    <formula>HelpReadingList__r.Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Reading List Summary</label>
    <type>Text</type>
</CustomField>