force-app/main/default/objects/HelpInteraction__c/fields/HelpResource__c.field-meta.xml
<CustomField>
    <fullName>HelpResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Help Resource accessed during this Help Interaction</inlineHelpText>
    <label>Help Resource</label>
    <referenceTo>HelpResource__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>HelpInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>