force-app/main/default/objects/HelpInteraction__c/fields/HelpResourceId__c.field-meta.xml
<CustomField>
    <fullName>HelpResourceId__c</fullName>
    <formula>HelpResource__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Resource Id</label>
    <type>Text</type>
</CustomField>