force-app/main/default/objects/HelpInteraction__c/fields/HelpResourceLocation__c.field-meta.xml
<CustomField>
    <fullName>HelpResourceLocation__c</fullName>
    <formula>HelpResource__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Resource Location</label>
    <type>Text</type>
</CustomField>