force-app/main/default/objects/HelpInteraction__c/fields/HelpResourceUrl__c.field-meta.xml
<CustomField>
    <fullName>HelpResourceUrl__c</fullName>
    <formula>HelpResource__r.ResourceURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Resource Url</label>
    <type>Text</type>
</CustomField>