force-app/main/default/objects/HelpInteraction__c/fields/HelpTopic__c.field-meta.xml
<CustomField>
    <fullName>HelpTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Help Topic accessed in this Help Interaction</inlineHelpText>
    <label>Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>HelpInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>