force-app/main/default/objects/HelpInteraction__c/fields/HelpTopicId__c.field-meta.xml
<CustomField>
    <fullName>HelpTopicId__c</fullName>
    <formula>HelpTopic__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Topic Id</label>
    <type>Text</type>
</CustomField>