force-app/main/default/objects/HelpInteraction__c/fields/HelpTopicSummary__c.field-meta.xml
<CustomField>
    <fullName>HelpTopicSummary__c</fullName>
    <formula>HelpTopic__r.Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Topic Summary</label>
    <type>Text</type>
</CustomField>