force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteOption__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Vote that was cast as part of this interaction</description>
    <inlineHelpText>The Vote that was cast as part of this interaction</inlineHelpText>
    <label>Help Vote Option</label>
    <referenceTo>HelpVoteOption__c</referenceTo>
    <relationshipLabel>Help Interactions</relationshipLabel>
    <relationshipName>HelpInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>