force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteOptionCategory__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteOptionCategory__c</fullName>
    <description>Formula denormalising the Category from any Help Vote Option selected in this Interaction</description>
    <formula>TEXT( HelpVoteOption__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Vote Option Category</label>
    <type>Text</type>
</CustomField>