force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteOptionId__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteOptionId__c</fullName>
    <formula>HelpVoteOption__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Vote Option Id</label>
    <type>Text</type>
</CustomField>