force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteSetId__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteSetId__c</fullName>
    <formula>HelpVoteOption__r.HelpVoteSet__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Vote Set Id</label>
    <type>Text</type>
</CustomField>