force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteSetName__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteSetName__c</fullName>
    <formula>HelpVoteOption__r.HelpVoteSet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Vote Set Name</label>
    <type>Text</type>
</CustomField>