force-app/main/default/objects/HelpInteraction__c/fields/HelpVoteSetQuestionText__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteSetQuestionText__c</fullName>
    <formula>HelpVoteOption__r.HelpVoteSet__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help Vote Set Question Text</label>
    <type>Text</type>
</CustomField>