force-app/main/default/objects/HelpInteraction__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>The operating system on which the Browser (navigation software) was running when the Interaction was logged</description>
    <inlineHelpText>The operating system on which the Browser (navigation software) was running when the Interaction was logged</inlineHelpText>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>