force-app/main/default/objects/HelpInteraction__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>Stores the Name (Useful information) about the Context (Specific Record) being viewed. For example the Report or Dashboard Name. Use our Salesforce packaged Flow or build your own to populate this field.</description>
    <label>Record Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>