force-app/main/default/objects/HelpInteraction__c/fields/TimeAtContext__c.field-meta.xml
<CustomField>
    <fullName>TimeAtContext__c</fullName>
    <description>Number of seconds user spent at a particular context logged location</description>
    <formula>(DepartureDate__c - CreatedDate) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of seconds user spent at a particular context logged location</inlineHelpText>
    <label>Time at Context</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>