force-app/main/default/objects/HelpInteraction__c/fields/UITheme__c.field-meta.xml
<CustomField>
    <fullName>UITheme__c</fullName>
    <description>The the type of user interface (for example, browser or mobile app), as reported by Salesforce, that was being used at the time the Interaction was logged</description>
    <inlineHelpText>The the type of user interface (for example, browser or mobile app), as reported by Salesforce, that was being used at the time the Interaction was logged</inlineHelpText>
    <label>User Experience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>