force-app/main/default/objects/HelpInteraction__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <description>User Agent helps to identify if users are mobile or desktop users etc.</description>
    <inlineHelpText>User Agent helps to identify if users are mobile or desktop users etc.</inlineHelpText>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>