force-app/main/default/objects/HelpInteraction__c/listViews/Callout_Views.listView-meta.xml
<ListView>
    <fullName>Callout_Views</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>HelpedPageLayout__c</columns>
    <columns>HelpedElement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Callout</value>
    </filters>
    <label>Views: Callouts</label>
</ListView>