force-app/main/default/objects/HelpInteraction__c/listViews/Comments.listView-meta.xml
<ListView>
    <fullName>Comments</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>HelpTopic__c</columns>
    <columns>HelpedPageLayout__c</columns>
    <columns>HelpReadingList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Comment</value>
    </filters>
    <label>Feedback: Comments</label>
</ListView>