force-app/main/default/objects/HelpInteraction__c/listViews/Full_Topic_Views.listView-meta.xml
<ListView>
    <fullName>Full_Topic_Views</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Full Topic</value>
    </filters>
    <label>Views: Full Topic</label>
</ListView>