force-app/main/default/objects/HelpInteraction__c/listViews/Help_Requests.listView-meta.xml
<ListView>
    <fullName>Help_Requests</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Context__c</columns>
    <columns>ComponentId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>HelpRequest,Help Request</value>
    </filters>
    <label>Feedback: Help Requests</label>
</ListView>