force-app/main/default/objects/HelpInteraction__c/listViews/Last_Week_s_Interactions.listView-meta.xml
<ListView>
    <fullName>Last_Week_s_Interactions</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>All: Last Week</label>
</ListView>