force-app/main/default/objects/HelpInteraction__c/listViews/LUX_List_Type_Interactions.listView-meta.xml
<ListView>
    <fullName>LUX_List_Type_Interactions</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>LUX List Type</value>
    </filters>
    <label>User: List Type</label>
</ListView>