force-app/main/default/objects/HelpInteraction__c/listViews/Nudges.listView-meta.xml
<ListView>
    <fullName>Nudges</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>Context__c</columns>
    <columns>ComponentId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Nudge Displayed</value>
    </filters>
    <label>Nudges</label>
</ListView>