force-app/main/default/objects/HelpInteraction__c/listViews/Position_Detector_Context_Logs.listView-meta.xml
<ListView>
    <fullName>Position_Detector_Context_Logs</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Context__c</columns>
    <columns>ContextObjectLabel__c</columns>
    <columns>ComponentId__c</columns>
    <columns>iahelp__Geolocation__Latitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Position Detector Context Log</value>
    </filters>
    <label>Position Detector Context Logs</label>
</ListView>