force-app/main/default/objects/HelpInteraction__c/listViews/Reading_List_Entry_Views.listView-meta.xml
<ListView>
    <fullName>Reading_List_Entry_Views</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>HelpReadingList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Reading List Entry</value>
    </filters>
    <label>Views: Reading List Entries</label>
</ListView>