force-app/main/default/objects/HelpInteraction__c/listViews/Resource_Views.listView-meta.xml
<ListView>
    <fullName>Resource_Views</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>HelpResource__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Resource</value>
    </filters>
    <label>Views: Resources</label>
</ListView>