force-app/main/default/objects/HelpInteraction__c/listViews/Searches.listView-meta.xml
<ListView>
    <fullName>Searches</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Search,Tree Search Cancelled,Tree Search Completed</value>
    </filters>
    <label>User: Searches</label>
</ListView>