force-app/main/default/objects/HelpInteraction__c/listViews/Stickies_Help_Notes.listView-meta.xml
<ListView>
    <fullName>Stickies_Help_Notes</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpedPageLayout__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Sticky</value>
    </filters>
    <label>User: Stickies (Help Notes)</label>
</ListView>