force-app/main/default/objects/HelpInteraction__c/listViews/Today_s_interations.listView-meta.xml
<ListView>
    <fullName>Today_s_interations</fullName>
    <columns>NAME</columns>
    <columns>ContextObjectLabel__c</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>TimeAtContext__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All: Today</label>
</ListView>