force-app/main/default/objects/HelpInteraction__c/listViews/Tree_Node_Clicks.listView-meta.xml
<ListView>
    <fullName>Tree_Node_Clicks</fullName>
    <columns>NAME</columns>
    <columns>HelpInteractionType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HelpTopic__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpInteractionType__c</field>
        <operation>equals</operation>
        <value>Tree Node</value>
    </filters>
    <label>Views: Tree Node Clicks</label>
</ListView>